# powHER

./: .env.example  .gitignore  README.md  SPEC.md  app.py  main.py  pyproject.toml
corpus/: 01_phase_evidence.md  02_exercise_and_pain.md  03_training_principles.md  04_phase_education.md  05_safety_and_referral.md  SOURCES.md
docs/screenshots/: README.md
powher/: agent.py  context_builder.py  cycle.py  guardrails.py  messages.py  models.py  retriever.py  storage.py
tests/: test_context_builder.py  test_cycle.py  test_eval_seed.py  test_guardrails.py  test_normalize.py  test_routines.py  test_storage.py  test_tracking.py
