[project]
name = "powher"
version = "0.1.0"
description = """
A context-aware fitness web app empowering women in the gym. \
Adjusts recommended weights/reps by menstrual cycle phase, with \
supportive messaging. Near-term: manual cycle input + workout history \
tracking via an LLM agent. Long-term: Apple Health sync and a native iOS app.\
"""
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.116.0",
    "python-dotenv>=1.2.2",
    "streamlit>=1.38",
    "chromadb>=0.5",
    "sentence-transformers>=3.0",
    "cryptography>=43.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]
